[project]
name = "githhug"
version = "1.0.0"
description = "Daily project idea incubator — scrapes trending repos, models, and papers, then generates actionable project ideas with LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tyler Eveland", email = "j.tyler.eveland@gmail.com" }]
keywords = ["ai", "ideas", "trending", "github", "huggingface", "project-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.5"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "google-generativeai>=0.5", "anthropic>=0.30"]

[project.scripts]
githhug = "daily_run:main"

[project.urls]
Homepage = "https://github.com/evilander/githhug"
Issues = "https://github.com/evilander/githhug/issues"
